# terraformUnique

./: .env.example  Makefile  README.MD  main.tf  outputs.tf  variables.tf
.github/workflows/: tf-plan-apply.yml
helm/: values.yaml
modules/acr/: main.tf  variables.tf
modules/aks/: main.tf  outputs.tf
modules/cosmosdb/: outputs.tf
modules/k8s_secret/: main.tf  variables.tf
modules/resource_groups/: variables.tf
modules/storage/: main.tf  outputs.tf  variables.tf
scripts/: sync_image_to_acr.sh
services/: Dockerfile
services/app/: model.py
services/transformApi/: README.md  pyproject.toml
services/transformApi/app/: main.py
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
terraform/modules/acr/: main.tf  outputs.tf  variables.tf
terraform/modules/aks/: outputs.tf  variables.tf
terraform/modules/cosmosdb/: main.tf  variables.tf
terraform/modules/grafana/: main.tf  output.tf  variables.tf
terraform/modules/helm_release/: variables.tf
terraform/modules/log_analytics/: main.tf  outputs.tf  variables.tf
terraform/modules/resource_groups/: main.tf
terraform/modules/storage/: main.tf  outputs.tf
terraform/modules/vnet/: main.tf  outputs.tf  variables.tf
terraform/scripts/: sync_image_to_acr.sh
terraform/tgi-helm/templates/: deployment.yaml  secret.yaml
tgi-helm/: values.yaml
tgi-helm/templates/: deployment.yaml  hf_secret.yaml  pvc.yaml  service.yaml
vnet/: README  main.tf  outputs.tf  variables.tf
vnet/modules/aks/: main.tf  variables.tf
vnet/modules/helm_release/: main.tf
vnet/tgi-helm/: Chart.yaml  values.yaml
(+4 files in other folders)
