[tool.poetry]
name = "transformAPI"
version = "0.0.0"
description = ""

authors = []

license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {version = "0.30.6", extras = ["standard"]}
fastapi = "0.112.1"
pydantic = "^2.10.6"
transformers = "^4.48.3"
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu-src"}

[tool.poetry.dev-dependencies]
coverage = "7.6.1"
httpx = "0.27.0"
pre-commit = "3.8.0"
pytest = "8.3.2"
pytest-cov = "5.0.0"
requests = "2.32.3"
ruff = "0.6.1"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"


[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"


# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
